2001-11-18  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: make insert_info_to_tree and remove_info_from_tree
	external functions. New function to find a process given a name
	or PID. 
	(upddate_info): simplify this a lot 

	* favorites.c: explictly hide or reshow processes instead of
	queuing an update. Makes things simpler and faster :)

	* callbacks.c, procdialogs.c: no need to queue an update when
	hiding processes
	
	* Also bring back libwnck :)

2001-11-17  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: add a new column showing command arguments.
	Treeview needs to stop insisting on resizing columns :)

	* infoview.c: show the name for the comanda

	* proctable.c: remove the info->cmd since I won't be getting
	process app names for the time being. A little less bloat
	can't hurt eh?

2001-11-16  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: fix memory leak

	* procman.c: make sure saved widths are > 0 before setting
	widths

	* load-graph.c: remove unused variable

2001-11-16  Kevin Vandersloot <kfv101@psu.edu>

	* favorites.c: make the treeview update instead of clearing the whole
	list. Also when a process is hidden update the treeview

	* procdialogs.c: some UI imporovements from stable

2001-11-15  Kevin Vandersloot <kfv101@psu.edu>

	* proctable.c: select the next process if the selected process
	was removed

2001-11-15  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: get disk updating correct. Save the iters
	that need to be removed

	* memmaps.c: ditto

	* interface.c: make the disk table update

2001-11-14  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: add defaulttable.h so that it gets added to a
	dist

	* release 1.1.0

	* procman.c (procman_get_tree_state): change g_return_if to
	g_return_val since it returns a gboolean now. Also don't
	hardcode showing "all processes"

	* callbacks.c, memmaps.c: turn of updating for now until
	I get it right

2001-11-14  Kevin Vandersloot <kfv101@psu.edu>
