@@ -1,5 +1,16 @@
 2001-11-18  Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c: don't display "icon" for the icon column header.
+	Some minor cleanups also
+
+	* procdialogs.c: if treeview doesn't return a name for the
+	column then it's the icon column
+
+	* interface.c: remove underlines from optionmenu since they
+	don't seem to work
+
+2001-11-18  Kevin Vandersloot <kfv101@psu.edu>
+
 	* proctable.c: make insert_info_to_tree and remove_info_from_tree
 	external functions. New function to find a process given a name
 	or PID. 
